--- a/A_bulletin_board_website_cameramarket/main_page/index.html
+++ b/A_bulletin_board_website_cameramarket/main_page/index.html
@@ -1,8 +1,7 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="A_bulletin_board_website_cameramarket/style/header.css">
+        <link rel="stylesheet" href="">
         <link rel="stylesheet" href="style/main_menu.css">
         <link rel="stylesheet" href="style/main_content.css">
         <title>
@@ -142,149 +141,4 @@
             <h1 style="font-size: 35px; color: red;">Australia Camera Market</h1>
         </div>
     </body>
-=======
-<!DOCTYPE html>
-<html>
-    <head>
-        <link rel="stylesheet" href="style/header.css">
-        <link rel="stylesheet" href="style/main_menu.css">
-        <link rel="stylesheet" href="style/main_content.css">
-        <title>
-            "Australia Second Hand -Buy & Sell | Tools | Costume | Appliance | Others "
-        </title>
-        
-    </head>
-
-    <body>
-        <header class="header">
-        <div id="header_wrapper">                          
-            <div class="left-section">
-                <a href="/" rel="home">
-                    <img class="home_logo" src="home_logo.png" alt="home" height="80" width="240">
-                </a>    
-            </div>
-
-            <div class="middle-section">
-                <input type="text" class="search-bar" placeholder="Search Second Hand">
-                    <button type="submit" class="search-btn">
-                        <div class="icon-search">
-                            <svg xmlns="http://www.w3.org/2000/svg" enable-background="new 0 0 24 24" 
-                            height="24" viewBox="0 0 24 24" width="24" focusable="false" style="pointer-events: none; 
-                            display: block; width: 100%; height: 100%;">
-                            <path d="m20.87 20.17-5.59-5.59C16.35 13.35 17 11.75 17 10c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.75 0 3.35-.65 4.58-1.71l5.59 5.59.7-.71zM10 16c-3.31 0-6-2.69-6-6s2.69-6 6-6 6 2.69 6 6-2.69 6-6 6z"></path>
-                            </svg>
-                        </div>                        
-                    </button>                    
-                </div>
-
-            <div class="right-section">
-                <div class = "membership-id">User Login:
-                </div>
-                <input type="text" class="id-box" placeholder= "Username">
-                <input type="text" class="password" placeholder="Password">
-                <button class="login-btn">Log In</button>
-                <button class="new-id-btn">Create Account</button>
-            </div>
-        </div>
-        </header>
-        <!--header ends here-->
-        <!--nav starts here-->
-        <nav id="container_menus">
-            <div class="create_new_ads_wrap">
-                <button id="create_new_ads">
-                    <a href="create_ads.html" class="creat_ads_btn">Create a New Ad</a>
-                </button>
-            </div>
-            <ul id="main_menu_ul" class="main_menu_line">
-                <li id="menu_main_content_accessaries" class="main_menu_list">
-                    <a href="menu_main/accessaries" title="Accessaries" >Accessaries</a>
-                    <ul id="sub_menu">
-                        <li id="sub_list_accessaries_box1">
-                            <a href="sub_list_accessaries/bags&cases">Bags/Case</a>
-                        </li>
-                        <li id="sub_list_accessaries_box2">
-                            <a href="sub_list_accessaries/batteries">Batteries</a>
-                        </li>
-                        <li id="sub_list_accessaries_box3">
-                            <a href="sub_list_accessaries/Light&flashes">Lights/Flashes</a>
-                        </li>
-                        <li id="sub_list_accessaries_box4">
-                            <a href="sub_list_accessaries/memory_cards">Memory Cards</a>
-                        </li>
-                        <li id="sub_list_accessaries_box5">
-                            <a href="sub_list_accessaries/tripods">Tripods</a>
-                        </li>
-                    </ul>
-                </li>
-                <li id="menu_main_content_cameras" class="main_menu_list">
-                    <a href="menu_main/Cameras" title="Cameras">Cameras</a>
-                    <ul id="sub_menu_camera">
-                        <li id="sub_menu_camera_box1">
-                            <a href="sub_camera/dslr">DSLR</a>
-                        </li>
-                        <li id="sub_menu_camera_box2">
-                            <a href="sub_camera/compact">Compact</a>
-                        </li>
-                        <li id="sub_menu_camera_box3">
-                            <a href="sub_camera/Video">Video</a>
-                        </li>
-                        <li id="sub_menu_camera_box4">
-                            <a href="sub_camera/film_slr">Film SLR</a>
-                        </li>
-                        <li id="sub_menu_camera_box5">
-                            <a href="sub_camera/others">Others</a>
-                        </li>
-                    </ul>
-                </li>
-                <li id="menu_main_content_lenses" class="main_menu_list">
-                    <a href="menu_main/lenses" title="Lenses">Lenses</a>
-                    <ul id="sub_menu_lenses">
-                        <li id="sub_menu_lenses_box1">
-                            <a href="sub_lenses/canon">Canon</a>
-                        </li>
-                        <li id="sub_menu_lenses_box2">
-                            <a href="sub_lenses/nikon">Nikon</a>
-                        </li>
-                        <li id="sub_menu_lenses_box3">
-                        <a href="sub_lenses/sigma">Sigma</a>
-                        </li>
-                        <li id="sub_menu_lenses_box4">
-                            <a href="sub_lenses/tamron">Tamron</a>
-                        </li>
-                        <li id="sub_menu_lenses_box5">
-                            <a href="sub_lenses/leica">Leica</a>
-                        </li>
-                        <li id="sub_menu_lenses_box6">
-                            <a href="sub_lenses/pentax">Pentax</a>
-                        </li>
-                        <li id="sub_menu_lenses_box7">
-                            <a href="sub_lenses/sony">Sony</a>
-                        </li>
-                        <li id="sub_menu_lenses_box8">
-                            <a href="sub_lenses/tokina">Tokina</a>
-                        </li>
-                        <li id="sub_menu_lenses_box9">
-                            <a href="sub_lenses/others">Others</a>
-                        </li>
-                    </ul>
-                <li id="menu_main_Content_others" class="main_menu_list">
-                    <a href="menu_main/others" title="Others">Others</a>
-                </li>
-            </ul>
-        </nav>
-
-        <div id="content_heading">
-            <p style ="font-size: 30px; margin: 10px; color: red;">Australia Camera Market is a FREE service to list used camera gear</p>
-            <p style ="font-size: 18px; line-height: 27px;">Advertisements will be seen by hundreds of daily visitors. Listings will automatically posted to Facebook & Twitter.</p>
-            <p style ="font-size: 18px; line-height: 27px;"><a href="/user/register">REgister now</a> and start selling your <strong>used camera gear</strong>, it's absolutely <strong>FREE</strong>! No Final Fee, No Catch.
-            </p>
-        </div>
-        
-        <!--header ends here-->
-        <!--main-->
-        <div id="content">
-            <h1 style="font-size: 35px; color: red;">Australia Camera Market</h1>
-        </div>
-    </body>
->>>>>>> e6c91d4039c4f9ba74953cda9d832050ae1b5d22
 </html>
